--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "filament/filament": "^4.0"
+        "filament/filament": "^4.0|^5.0"
     },
     "autoload": {
         "psr-4": {
